# 007agent

./: .gitignore  README.md  main.py  pyproject.toml  test.md
.trae/documents/: agent-history-persistence-plan.md  agent-persistence-test-and-impl-plan.md  context-compaction-plan.md  refactor-chat-page-to-modular-files.md  subagent-and-async-task-plan.md  subagent-async-task-implementation.md  workspace-and-memory-fix-plan.md
.trae/specs/add-long-running-task-support/: checklist.md  spec.md  tasks.md
app/: agent.py  checkpoint.py  cli.py  compaction.py  config.py  embedding.py  memory.py  memory_tool.py  retriever.py  retry.py  search.py  service.py  store.py  subagent.py  task_manager.py  task_planner.py  tools.py
app/static/: chat.css  chat.html  chat.js
docs/: architecture.md  context-compaction-design.md  long-running-task-plan.md  session-continuity-plan.md  session-continuity-plan.md.tmp  skill-design.md
skills/: __init__.py  anthropic_skill.py  openai_skill.py
skills/code-review/: SKILL.md
skills/test-generation/: SKILL.md
subagents/code-reviewer/: AGENT.md
subagents/test-generator/: AGENT.md
tests/: test_agent.py  test_checkpoint.py  test_cli.py  test_compaction.py  test_config.py  test_embedding.py  test_long_running_e2e.py  test_memory.py  test_memory_tool.py  test_retriever.py  test_retry.py  test_search.py  test_service.py  test_skills.py  test_store.py  test_subagent.py  test_task_api.py  test_task_planner.py  test_tools.py  test_web_fetch.py
