[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentscope>=2.0.4.post1",
    "anthropic>=0.116.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.139.2",
    "fastembed>=0.6.0",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "uvicorn>=0.51.0",
    "zvec>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
